# Ink-Coretime-Clicker-

./: .gitignore  CoretimeClicker_design.md  DEPLOYMENT_RUNBOOK.md  DEPLOY_NOW.md  MVP_COMPLETE.md  PRIVACY_POLICY.md  README.md  SECURITY.md  TERMS_OF_SERVICE.md  rust-toolchain.toml  swanky.config.json
.cursor/: astar-migration-summary.md  contracttrapped-investigation.md  deploy-swanky-cli.md  deployment-readiness.md  parachain-assessment.md  resource-exploration-summary.md
.cursor/plans/: README.md  mvp-clicker-game-plan-c84e4717.plan.md  plan-1-fix-contracts-tests.md  plan-2-frontend-integration-testing.md  plan-2-test-results.md  plan-3-contract-instantiation-params.md  plan-3-contract-metadata-integration.md  plan-3-env-template.md  plan-3-metadata-integration-guide.md  plan-3-results.md  (+11 more)
artifacts/: coretime_clicker.contract  coretime_clicker.wasm  prize_pool.contract  prize_pool.wasm  rng.contract  rng.json  rng.wasm
contracts/: README.md
contracts/coretime_clicker/: Cargo.toml
contracts/coretime_clicker/src/: lib.rs
contracts/prize_pool/: Cargo.toml
contracts/prize_pool/src/: lib.rs
docs/: infra.md
frontend/: README.md  check_balance.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
infra/: Caddyfile  substrate-node.service
scripts/: build_contract.sh  check_balance.js  check_balance_simple.sh  copy_metadata.ps1  copy_metadata.sh  deploy_prize_pool.ps1  deploy_prize_pool.sh  deploy_rng.ps1  deploy_rng.sh  deploy_rng_inkathon_pattern.js  deploy_rng_node.js  deploy_test_contract.js  test_contract.sh
(+51 files in other folders)
