[package]
name = "coretime_clicker"
version = "0.1.0"
edition = "2021"
authors = ["Coretime Clicker Contributors"]

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }

[dev-dependencies]
ink = { version = "4.3.0", features = ["std"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
[lib]
path = "src/lib.rs"
